# hexen

./: .env.example  IMPROVEMENTS_SUMMARY.md  Makefile  QUICKSTART.md  README.md  backend_server.py  pyproject.toml  start.sh
frontend/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
frontend/src/components/: FavoriteButton.svelte  SearchBar.svelte  SearchPage.svelte
frontend/src/layouts/: BaseLayout.astro  DefaultLayout.astro
frontend/src/pages/: 404.astro  browse.astro  discover.astro  favorites.astro  genre.astro  home.astro  index.astro  movies.astro  search.astro  watch.astro
frontend/src/styles/: global.css
src/hexenapi/: __init__.py  utils.py
src/hexenapi/backend/: __init__.py  __init__.py.bak  _bases.py  _bases_v1.py  _constants.py  _web_models.py  constants.py  core.py  core_v1.py  core_v3.py  crypto.py  download.py  download_v1.py  download_v3.py  exceptions.py  helpers.py  http_client.py  models_v1.py  requests.py  urls.py  v3_helpers.py
src/hexenapi/v1/: __init__.py  constants.py  core.py  download.py  exceptions.py  helpers.py  models.py  requests.py  stream.py
src/hexenapi/v2/: __init__.py  _bases.py  _bases_v1.py  _web_models.py  constants.py  core.py  core_v1.py  core_v3.py  crypto.py  download.py  download_v1.py  download_v3.py  exceptions.py  helpers.py  http_client.py  models_v1.py  requests.py  stream.py  types.py  urls.py  v3_helpers.py
src/hexenapi/v3/: __init__.py  _bases.py  constants.py  core.py  crypto.py  download.py  exceptions.py  helpers.py  http_client.py  stream.py  urls.py
tests/: test_crypto.py  test_tmdb_scrape.py
tests/v1/: __init__.py
tests/v1/core/: test_item_details.py  test_item_details_sync.py  test_others.py  test_others_sync.py  test_search.py  test_search_sync.py
tests/v1/download/: test_using_item_details _sync.py  test_using_item_details.py  test_using_search_results.py  test_using_search_results_sync.py
tests/v1/extractors/: __init__.py  test_json.py  test_model.py  test_tag.py
tests/v2/: __init__.py
tests/v3/: test_download.py  test_download_captions.py
(+113 files in other folders)
